--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-is": "^18.1.0",
     "react-qr-code": "^2.0.7",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
